// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SelectBox /> > labelDescription > sets label description 1`] = `
<div
  class="tw-inline-block "
>
  <label
    class="tw-label  "
  >
    <div
      class="tw-label-text"
    >
      My Title
      <div
        class="tw-tooltip tw-tooltip-right"
        data-tip="My Description"
      >
        <svg
          aria-hidden="true"
          class="tw-w-4 tw-h-4"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
  <select
    class="tw-select tw-select-bordered tw-w-full"
  >
    <option
      disabled=""
      value="PLACEHOLDER"
    />
  </select>
</div>
`;

exports[`<SelectBox /> > labelTitle > sets label 1`] = `
<div
  class="tw-inline-block "
>
  <label
    class="tw-label  "
  >
    <div
      class="tw-label-text"
    >
      My Title
    </div>
  </label>
  <select
    class="tw-select tw-select-bordered tw-w-full"
  >
    <option
      disabled=""
      value="PLACEHOLDER"
    />
  </select>
</div>
`;

exports[`<SelectBox /> > renders properly 1`] = `
<div
  class="tw-inline-block "
>
  <select
    class="tw-select tw-select-bordered tw-w-full"
  >
    <option
      disabled=""
      value="PLACEHOLDER"
    />
    <option
      value="option-1"
    >
      Option 1
    </option>
    <option
      value="Option 2"
    >
      Option 2
    </option>
  </select>
</div>
`;
